# libra

./: .gitignore  Cargo.toml
common/lcs/: Cargo.toml
common/lcs-sgx/: Cargo.toml
common/lcs-sgx/src/: lib.rs
common/lcs/src/: lib.rs
common/nibble/: Cargo.toml
common/nibble/src/: lib.rs
common/workspace-hack/: Cargo.toml
consensus/: Makefile  run-sgx.sh
consensus/enclave/: .Cargo.toml.swp  Cargo.toml  Cargo.toml.bak  Makefile
consensus/enclave/src/: lib.rs  safety_rules.rs
consensus/lsr-sgx/: Cargo.toml  Makefile
consensus/lsr-sgx/src/: lib.rs  main.rs  safety_rules.rs  storage_proxy.rs
consensus/safety-rules/: Cargo.toml  build.rs
consensus/safety-rules/benches/: safety_rules.rs
consensus/safety-rules/sgx/: Cargo.toml  build.sh
consensus/safety-rules/sgx/src/: .lib.rs  error.rs  main.rs  safety_rules.rs  seal.rs  storage_proxy.rs  t_safety_rules.rs
consensus/safety-rules/src/: local_client.rs  main.rs  persistent_safety_storage.rs  safety_rules.rs  safety_rules_manager.rs  safety_rules_sgx.rs  safety_rules_sgx_runner.rs
consensus/safety-rules/src/tests/: safety_rules_sgx.rs  suite.rs
crypto/crypto/: Cargo.toml  Cargo.toml.sgx
crypto/crypto-derive/: Cargo.toml  Cargo.toml.orig  Xargo.toml
crypto/crypto-derive/src/: lib.rs
crypto/crypto/src/: lib.rs  traits.rs
language/move-core/types/: Cargo.toml
network/network-address/: Cargo.toml
secure/storage/: Cargo.toml
secure/storage/src/: github.rs  in_memory.rs  kv_storage.rs  namespaced_storage.rs  on_disk.rs  vault.rs
sgx-deps/crypto/crypto/: Cargo.toml
sgx-deps/crypto/crypto-derive/: Cargo.toml
sgx-deps/lcs/: Cargo.toml
sgx-deps/nibble/: Cargo.toml
sgx-deps/serde-name/: Cargo.toml
sgx-deps/serde-name/src/: lib.rs
sgx-deps/types/: Cargo.toml
sgx-libs/crypto/crypto/: Cargo.toml
sgx-libs/crypto/crypto-derive/: Cargo.toml
sgx-libs/crypto/crypto-derive/src/: hasher.rs  lib.rs  unions.rs
sgx-libs/crypto/crypto/src/: ed25519.rs  error.rs  hash.rs  hkdf.rs  lib.rs  multi_ed25519.rs  noise.rs  traits.rs  x25519.rs
sgx-libs/lcs-sgx/src/: de.rs  error.rs  lib.rs  ser.rs
sgx-libs/nibble/: Cargo.toml
sgx-libs/nibble/src/: lib.rs
sgx-libs/types/: Cargo.toml  Cargo.toml.bak
sgx-libs/types/src/: account_address.rs  lib.rs  validator_signer.rs
sgx-sdk/samplecode/hello-rust/enclave/: Cargo.toml
sgx-sdk/samplecode/hello-rust/enclave/src/: lib.rs
types/: Cargo.toml
types/src/: lib.rs  sgx_types.rs
types/src/transaction/: helpers.rs
