[package]
name = "libra-canonical-serialization-sgx"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra Canonical Serialization (LCS)"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"


[dependencies]
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git", tag = "sgx_1.1.2" }
serde = {git = "https://github.com/mesalock-linux/serde-sgx.git", tag = "sgx_1.1.2" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git"}


[dev-dependencies]
criterion = "0.3.2"
proptest = "0.10.0"
proptest-derive = "0.2.0"

[[bench]]
name = "lcs_bench"
harness = false
