[package]
name = "libra-workspace-hack"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra workspace hack"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
#bytes = { version = "0.5.5", features = ["serde", "std"] }
bytes = { git = "https://github.com/mesalock-linux/bytes-sgx.git", tag = "sgx_1.1.2", features = ["serde"]}
#cc = { version = "1.0.56", features = ["jobserver", "parallel"] }
#log = { version = "0.4.8", features = ["serde", "std"] }
#memchr = { version = "2.3.3", features = ["std", "use_std"] }
#num-traits = { version = "0.2.12", features = ["std"] }
#petgraph = { version = "0.5.1", features = ["graphmap", "matrix_graph", "stable_graph"] }
serde = {git = "https://github.com/mesalock-linux/serde-sgx.git", version = "1.0", features = ["derive"]}
#serde = { version = "1.0", features = ["derive"]}
sha-1 = { version = "0.9.1", features = ["std"] }
subtle = { version = "2.2.3", features = ["i128", "std"] }
syn = { version = "1.0.33", features = ["clone-impls", "derive", "extra-traits", "fold", "full", "parsing", "printing", "proc-macro", "quote", "visit", "visit-mut"] }
