[package]
name = "lsr_enclave"
version = "1.0.0"
#authors = ["The Teaclave Authors"]
authors = ["Liwei Guo"]
edition = "2018"

[lib]
name = "lsr_enclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_unwind = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git"}

[dependencies]
#libra-types = { path = "../../sgx-libs/types", version = "0.1.0", package = "libra-types-sgx"}
lcs = { path = "../../sgx-deps/lcs", version = "0.1.0", package = "libra-canonical-serialization-sgx"}
libra-crypto-derive = { path = "../../sgx-deps/crypto/crypto-derive", version = "0.1.0", package = "libra-crypto-derive-sgx"}
#libra-crypto = { path = "../../sgx-deps/crypto/crypto/", version = "0.1.0", package = "libra-crypto-sgx"}

