[package]
name = "libra-crypto"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra libra-crypto"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"


[dependencies]
curve25519-dalek = { git = "https://github.com/zaxguo/curve25519-dalek.git", branch = "fiat2", default-features = false }
#curve25519-dalek = { git = "https://github.com/novifinancial/curve25519-dalek.git", branch = "fiat2", default-features = false }
ed25519-dalek = { git = "https://github.com/zaxguo/ed25519-dalek.git", branch = "fiat2", features = ["serde"], default-features = false }
#ed25519-dalek = { git = "https://github.com/novifinancial/ed25519-dalek.git", branch = "fiat2", features = ["serde"], default-features = false }
x25519-dalek = { git = "https://github.com/zaxguo/x25519-dalek.git", branch = "fiat2", default-features = false }
#x25519-dalek = { git = "https://github.com/novifinancial/x25519-dalek.git", branch = "fiat2", default-features = false }
#anyhow = { git = "https://github.com/mesalock-linux/anyhow-sgx.git", tag = "sgx_1.1.2" }
anyhow = { git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
bytes = { git = "https://github.com/mesalock-linux/bytes-sgx.git", tag = "sgx_1.1.2" }
digest = "0.9.0"
hex = "0.4.2"
hmac = "0.8.1"
once_cell = "1.4.0"
mirai-annotations = "1.8.0"
proptest = { version = "0.10.0", optional = true }
proptest-derive = { version = "0.2.0", optional = true }
rand = {git = "https://github.com/mesalock-linux/rand-sgx.git", tag = "sgx_1.1.2"}
rand_core = {git = "https://github.com/mesalock-linux/rand-sgx.git", tag = "sgx_1.1.2"}
#serde = {git = "https://github.com/mesalock-linux/serde-sgx.git", tag = "sgx_1.1.2", features = ["derive"]}
serde = {git = "https://github.com/mesalock-linux/serde-sgx.git", version = "1.0", features = ["derive"]}
serde_bytes = {git = "https://github.com/mesalock-linux/serde-bytes-sgx.git", tag = "sgx_1.1.2"}
#serde-name = "0.1.0"
serde-name = { path = "../../sgx-deps/serde-name" }
sha2 = "0.9.1"
static_assertions = { version = "1.1.0", optional = true }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git", tag = "sgx_1.1.2" }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
sha3 = "0.9.1"
aes-gcm = "0.6.0"
#libra-crypto-derive = { path = "../../../crypto/crypto-derive", version = "0.1.0", package = "libra-crypto-derive"}
libra-crypto-derive = { path = "../crypto-derive", version = "0.1.0", package = "libra-crypto-derive"}
#lcs = { path = "../../sgx-deps/lcs", version = "0.1.0", package = "libra-canonical-serialization-sgx" }
lcs = { path = "../../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-nibble = { path = "../../sgx-deps/nibble", version = "0.1.0", package = "libra-nibble-sgx"}
#libra-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }

[dev-dependencies]
#bitvec = "0.17.4"
#byteorder = "1.3.4"
#proptest = "0.10.0"
#proptest-derive = "0.2.0"
#ripemd160 = "0.9.1"
#criterion = "0.3.3"
#sha3 = "0.9.1"
#serde_json = "1.0.56"

[features]
default = ["std", "fiat_u64_backend"]
assert-private-keys-not-cloneable = ["static_assertions"]
cloneable-private-keys = []
fuzzing = ["proptest", "proptest-derive", "cloneable-private-keys"]
batch = ["ed25519-dalek/batch"]
std = ["curve25519-dalek/std", "ed25519-dalek/std", "x25519-dalek/std"]
u64_backend = ["curve25519-dalek/u64_backend", "ed25519-dalek/u64_backend", "x25519-dalek/u64_backend"]
fiat_u64_backend = ["curve25519-dalek/fiat_u64_backend", "ed25519-dalek/fiat_u64_backend", "x25519-dalek/fiat_u64_backend"]

