[package]
name = "libra-nibble-sgx"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra libra-nibble"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[lib]
name = "libra_nibble_sgx"
path = "../../common/nibble"

[dependencies]
proptest = { version = "0.10.0", optional = true }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", tag = "sgx_1.1.2", features = ["derive"]}

[features]
default = []
fuzzing = ["proptest"]
