[package]
name = "libra-types-sgx"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra types"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_rand = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git", tag = "sgx_1.1.2" }
serde = {git = "https://github.com/mesalock-linux/serde-sgx.git", tag = "sgx_1.1.2", features = ["derive"]}
serde_bytes = {git = "https://github.com/mesalock-linux/serde-bytes-sgx.git", tag = "sgx_1.1.2"}
anyhow = {git = "https://github.com/mesalock-linux/anyhow-sgx.git", tag = "sgx_1.1.2" }
bytes = "0.5.5"
chrono = { version = "0.4.11", default-features = false, features = ["clock"] }
hex = "0.4.2"
itertools = { version = "0.9.0", default-features = false }
once_cell = "1.4.0"
mirai-annotations = "1.8.0"
proptest = { version = "0.10.0", default-features = false, optional = true }
proptest-derive = { version = "0.2.0", default-features = false, optional = true }
radix_trie = { version = "0.1.6", default-features = false }
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }

lcs = { path = "../lcs-sgx", version = "0.1.0", package = "libra-canonical-serialization-sgx" }
libra-crypto = { path = "../../crypto/crypto", version = "0.1.0" }
libra-crypto-derive = { path = "../../crypto/crypto-derive", version = "0.1.0" }
#libra-network-address = { path = "../network/network-address", version = "0.1.0" }
#libra-proptest-helpers = { path = "../common/proptest-helpers", version = "0.1.0", optional = true }
#libra-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
move-core-types = { path = "../../language/move-core/types", version = "0.1.0" }

[dev-dependencies]
#regex = "1.3.9"
#proptest = "0.10.0"
#proptest-derive = "0.2.0"
#serde_json = "1.0.55"

[features]
default = []
#fuzzing = ["proptest", "proptest-derive", "libra-proptest-helpers", "libra-crypto/fuzzing", "libra-network-address/fuzzing", "move-core-types/fuzzing"]
