[package]
name = "move-core-types"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Core types for Move"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = { git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
bytes = { git = "https://github.com/mesalock-linux/bytes-sgx.git" }
chrono = {git = "https://github.com/mesalock-linux/chrono-sgx.git" }
hex = "0.4.2"
mirai-annotations = "1.8.0"
rand = {git = "https://github.com/mesalock-linux/rand-sgx.git", tag = "sgx_1.1.2"}
serde = {git = "https://github.com/mesalock-linux/serde-sgx.git", version = "1.0", features = ["derive"]}
serde_bytes = {git = "https://github.com/mesalock-linux/serde-bytes-sgx.git", tag = "sgx_1.1.2"}
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git", tag = "sgx_1.1.2" }
proptest = { version = "0.10.0", default-features = false, optional = true }
proptest-derive = { version = "0.2.0", default-features = false, optional = true }
ref-cast = "1.0.2"
lcs = { path = "../../../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
#libra-workspace-hack = { path = "../../../common/workspace-hack", version = "0.1.0" }
libra-crypto = { path = "../../../crypto/crypto", version = "0.1.0" }
libra-crypto-derive = { path = "../../../crypto/crypto-derive", version = "0.1.0" }

[dev-dependencies]
once_cell = "1.4.0"
proptest = "0.10.0"
proptest-derive = "0.2.0"
regex = "1.3.9"
serde_json = "1.0.56"

[features]
default = []
fuzzing = ["proptest", "proptest-derive"]
